--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.4'
 
 services:
   eventstore.db:
-    image: eventstore/eventstore:20.10.0-buster-slim
+    image: eventstore/eventstore
     environment:
       - EVENTSTORE_CLUSTER_SIZE=1
       - EVENTSTORE_RUN_PROJECTIONS=All
@@ -13,8 +13,8 @@ services:
       - EVENTSTORE_ENABLE_EXTERNAL_TCP=true
       - EVENTSTORE_ENABLE_ATOM_PUB_OVER_HTTP=true
     ports:
-      - "1113:1113"
-      - "2113:2113"
+      - 1113:1113
+      - 2113:2113
     volumes:
       - type: volume
         source: eventstore-volume-data
@@ -23,6 +23,29 @@ services:
         source: eventstore-volume-logs
         target: /var/log/eventstore
 
+  mongo.db:
+    image: mongo
+    container_name: mongo-db
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=root
+      - MONGO_INITDB_ROOT_PASSWORD=root
+    ports:
+      - 27017:27017
+    volumes:
+      - type: volume
+        source: mongo-volume-data
+        target: /var/lib/mongo
+
+  mongo-express:
+    image: mongo-express
+    environment:
+      - ME_CONFIG_MONGODB_SERVER=mongo-db
+      - ME_CONFIG_MONGODB_ADMINUSERNAME=root
+      - ME_CONFIG_MONGODB_ADMINPASSWORD=root
+    ports:
+      - 8081:8081
+
 volumes:
   eventstore-volume-data:
   eventstore-volume-logs:
+  mongo-volume-data:
