--- a/nx.json
+++ b/nx.json
@@ -30,6 +30,12 @@
   "projects": {
     "web": {
       "tags": []
+    },
+    "domain-core": {
+      "tags": []
+    },
+    "domain-project": {
+      "tags": []
     }
   }
 }
