--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,7 +17,14 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@simple-jira/domain-core": [
+        "libs/domain-core/src/index.ts"
+      ],
+      "@simple-jira/domain-project": [
+        "libs/domain-project/src/index.ts"
+      ]
+    }
   },
   "exclude": [
     "node_modules",
