Generate Core and Project (#7)
* Formatting and Env improved

* Code bootstraped

* Command and CommandHandlers Scaffolded

* Command and CommandHandlers Scaffolded

--- a/libs/domain-core/tsconfig.spec.json
+++ b/libs/domain-core/tsconfig.spec.json
@@ -2,16 +2,17 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
+    "module": "commonjs",
     "types": [
+      "jest",
       "node"
-    ],
-    "emitDecoratorMetadata": true,
-    "target": "es2015"
+    ]
   },
-  "exclude": [
-    "**/*.spec.ts"
-  ],
   "include": [
-    "**/*.ts"
+    "**/*.spec.ts",
+    "**/*.spec.tsx",
+    "**/*.spec.js",
+    "**/*.spec.jsx",
+    "**/*.d.ts"
   ]
 }
