--- a/libs/domain-core/tsconfig.lib.json
+++ b/libs/domain-core/tsconfig.lib.json
@@ -1,12 +1,12 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
+    "module": "commonjs",
     "outDir": "../../dist/out-tsc",
+    "declaration": true,
     "types": [
       "node"
-    ],
-    "emitDecoratorMetadata": true,
-    "target": "es2015"
+    ]
   },
   "exclude": [
     "**/*.spec.ts"
