New Lib created

--- a/nx.json
+++ b/nx.json
@@ -31,6 +31,9 @@
     "web": {
       "tags": []
     },
+    "adapter-event-store-db": {
+      "tags": []
+    },
     "domain-core": {
       "tags": []
     },
