--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -18,6 +18,9 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@simple-jira/adapter-event-store-db": [
+        "libs/adapter-event-store-db/src/index.ts"
+      ],
       "@simple-jira/domain-core": [
         "libs/domain-core/src/index.ts"
       ],
