Moved to pointslog package

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -18,10 +18,10 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@simple-jira/adapter-event-store-db": [
+      "@points-log/adapter-event-store-db": [
         "libs/adapter-event-store-db/src/index.ts"
       ],
-      "@simple-jira/domain-core": [
+      "@points-log/domain-core": [
         "libs/domain-core/src/index.ts"
       ],
       "@simple-jira/domain-project": [
