--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
+    "@points-log/adapter-event-store-db": "^0.0.1",
+    "@points-log/domain-core": "^0.0.3",
     "mongodb": "^3.6.5",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.6.3",
