--- a/package.json
+++ b/package.json
@@ -56,9 +56,13 @@
     "@eventstore/db-client": "^1.1.0",
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
+    "@nestjs/graphql": "^7.10.3",
     "@nestjs/platform-express": "^7.0.0",
     "@points-log/adapter-event-store-db": "^0.0.1",
     "@points-log/domain-core": "^0.0.3",
+    "apollo-server-express": "^2.22.2",
+    "graphql": "^15.5.0",
+    "graphql-tools": "^7.0.4",
     "mongodb": "^3.6.5",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.6.3",
