--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.4'
 services:
   eventstore.db:
     image: eventstore/eventstore
+    container_name: eventstore.db
     environment:
       - EVENTSTORE_CLUSTER_SIZE=1
       - EVENTSTORE_RUN_PROJECTIONS=All
@@ -25,7 +26,7 @@ services:
 
   mongo.db:
     image: mongo
-    container_name: mongo-db
+    container_name: mongo.db
     environment:
       - MONGO_INITDB_ROOT_USERNAME=root
       - MONGO_INITDB_ROOT_PASSWORD=root
@@ -36,10 +37,10 @@ services:
         source: mongo-volume-data
         target: /var/lib/mongo
 
-  mongo-express:
+  mongo-express.app:
     image: mongo-express
     environment:
-      - ME_CONFIG_MONGODB_SERVER=mongo-db
+      - ME_CONFIG_MONGODB_SERVER=mongo.db
       - ME_CONFIG_MONGODB_ADMINUSERNAME=root
       - ME_CONFIG_MONGODB_ADMINPASSWORD=root
     ports:
