--- a/apps/backend/.eslintrc.json
+++ b/apps/backend/.eslintrc.json
@@ -13,7 +13,7 @@
       ],
       "parserOptions": {
         "project": [
-          "apps/web/tsconfig.*?.json"
+          "apps/backend/tsconfig.*?.json"
         ]
       },
       "rules": {}
