--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -72,9 +72,7 @@
   },
   "settings": {
     "import/resolver": {
-      "typescript": {
-        "project": "tsconfig.base.json"
-      }
+      "typescript": {}
     }
   }
 }
