--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "tslib": "^2.0.0",
     "uuid": "^8.3.2",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0"
+    "vue-router": "^3.2.0",
+    "vuetify": "^2.4.11"
   }
 }
