--- a/apps/frontend/.eslintrc.json
+++ b/apps/frontend/.eslintrc.json
@@ -10,6 +10,21 @@
   "overrides": [
     {
       "files": [
+        "*.ts",
+        "*.tsx",
+        "*.js",
+        "*.jsx",
+        "*.vue"
+      ],
+      "parserOptions": {
+        "project": [
+          "apps/frontend/tsconfig.*?.json"
+        ]
+      },
+      "rules": {}
+    },
+    {
+      "files": [
         "**/*.spec.{j,t}s?(x)"
       ],
       "env": {
