--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -72,7 +72,9 @@
   },
   "settings": {
     "import/resolver": {
-      "typescript": {}
+      "typescript": {
+        "project": "tsconfig.*.json"
+      }
     }
   }
 }
