--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@nx-plus/vue": "^11.0.0",
     "@types/jest": "26.0.8",
     "@types/node": "12.12.38",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "4.3.0",
     "@typescript-eslint/parser": "4.3.0",
     "@vue/cli-plugin-babel": "~4.5.0",
