--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "@nrwl/workspace": "11.5.2",
     "@nx-plus/vue": "^11.0.0",
     "@types/jest": "26.0.8",
+    "@types/mongodb": "^3.6.12",
     "@types/node": "12.12.38",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "4.3.0",
     "@typescript-eslint/parser": "4.3.0",
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -82,6 +84,7 @@
     "tslib": "^2.0.0",
     "uuid": "^8.3.2",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0"
+    "vue-router": "^3.2.0",
+    "vuetify": "^2.4.11"
   }
 }
